--- a/module_server/src/main/model/AndroidManifest.xml
+++ b/module_server/src/main/model/AndroidManifest.xml
@@ -34,7 +34,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:networkSecurityConfig="@xml/network_security_config">
+        android:networkSecurityConfig="@xml/network_security_config"
+        tools:replace="android:name,android:networkSecurityConfig">
 
         <provider
             tools:replace="android:authorities"
