--- a/module_app_yunnan/src/main/AndroidManifest.xml
+++ b/module_app_yunnan/src/main/AndroidManifest.xml
@@ -54,7 +54,7 @@
             android:name="com.amap.api.v2.apikey"
             android:value="96b6ecc570186acaf094df1474fe172d"/>
 
-        <activity android:name=".LoginActivity">
+        <activity android:name=".Ks_LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
